Details
-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.7.0
-
3
-
14973
Description
As a cheap way of approximating the fuzzy requests send by old and big endian clients I added some simple OBD_FAIL_CHECK() based corruption of mdt_body and mdt_rec_reint. (See the attached patch). Then I flipped the fail loc on an off while doing various file systemey things to my file system.
Here are some crashes. A few require removing previous assertions to be reachable.
[ 1792.436302] LustreError: 8395:0:(lod_dev.c:67:lod_fld_lookup()) ASSERTION( fid_is_sane(f\ id) ) failed: Invalid FID [0x340000402:0x29:0x4f00] [ 1792.440386] LustreError: 8395:0:(lod_dev.c:67:lod_fld_lookup()) LBUG [ 1792.442694] Pid: 8395, comm: mdt01_006 [ 1792.443977] [ 1792.443979] Call Trace: [ 1792.445454] [<ffffffffa02be8c5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [ 1792.447729] [<ffffffffa02beec7>] lbug_with_loc+0x47/0xb0 [libcfs] [ 1792.449860] [<ffffffffa0d3e5d5>] lod_fld_lookup+0x255/0x400 [lod] [ 1792.451948] [<ffffffffa0d50dd3>] lod_object_init+0x103/0x3c0 [lod] [ 1792.453914] [<ffffffffa04556d8>] lu_object_alloc+0xd8/0x320 [obdclass] [ 1792.455236] [<ffffffffa0456ba8>] lu_object_find_at+0x208/0x360 [obdclass] [ 1792.456579] [<ffffffff8155468b>] ? _read_unlock+0x2b/0x40 [ 1792.457703] [<ffffffffa02d565d>] ? cfs_hash_rw_unlock+0x1d/0x30 [libcfs] [ 1792.459020] [<ffffffffa02d6122>] ? cfs_hash_lookup+0x82/0xa0 [libcfs] [ 1792.460325] [<ffffffffa0456d16>] lu_object_find+0x16/0x20 [obdclass] [ 1792.461616] [<ffffffffa0c90ff6>] mdt_object_find+0x56/0x170 [mdt] [ 1792.462831] [<ffffffffa0c9aec2>] mdt_object_find_lock+0x42/0x170 [mdt] [ 1792.464173] [<ffffffffa0cc48a6>] mdt_reint_open+0x5c6/0x20b0 [mdt] [ 1792.465402] [<ffffffff815547cb>] ? _spin_unlock+0x2b/0x40 [ 1792.466493] [<ffffffffa02dbf3b>] ? upcall_cache_get_entry+0x3cb/0x880 [libcfs] [ 1792.467926] [<ffffffffa04734a0>] ? lu_ucred+0x20/0x30 [obdclass] [ 1792.469157] [<ffffffffa0c8fe45>] ? mdt_ucred+0x15/0x20 [mdt] [ 1792.470312] [<ffffffffa0ca88cc>] ? mdt_root_squash+0x2c/0x3f0 [mdt] [ 1792.471577] [<ffffffffa0cac761>] mdt_reint_rec+0x41/0xe0 [mdt] [ 1792.472740] [<ffffffffa0c97a63>] mdt_reint_internal+0x4c3/0x7c0 [mdt] [ 1792.474031] [<ffffffffa0c97f56>] mdt_intent_reint+0x1f6/0x520 [mdt] [ 1792.475273] [<ffffffffa0c96639>] mdt_intent_policy+0x499/0xca0 [mdt] [ 1792.476594] [<ffffffffa0643332>] ldlm_lock_enqueue+0x302/0x880 [ptlrpc] [ 1792.477991] [<ffffffffa066b2b1>] ldlm_handle_enqueue0+0x341/0x11e0 [ptlrpc] [ 1792.479419] [<ffffffffa06ea3e2>] tgt_enqueue+0x62/0x1d0 [ptlrpc] [ 1792.480663] [<ffffffffa06e9675>] tgt_request_handle+0x245/0xad0 [ptlrpc] [ 1792.482024] [<ffffffffa069c921>] ptlrpc_main+0xcf1/0x1870 [ptlrpc] [ 1792.483281] [<ffffffffa069bc30>] ? ptlrpc_main+0x0/0x1870 [ptlrpc] [ 1792.484516] [<ffffffff8109eab6>] kthread+0x96/0xa0 [ 1792.485504] [<ffffffff8100c30a>] child_rip+0xa/0x20 [ 1792.486478] [<ffffffff81554710>] ? _spin_unlock_irq+0x30/0x40 [ 1792.487626] [<ffffffff8100bb10>] ? restore_args+0x0/0x30 [ 1792.488699] [<ffffffff8109ea20>] ? kthread+0x0/0xa0 [ 1792.489699] [<ffffffff8100c300>] ? child_rip+0x0/0x20
If I delete the previous assertion then I get:
Message from syslogd@u at Jul 18 11:10:45 ... kernel:[ 235.762603] LustreError: 14553:0:(osd_handler.c:561:osd_fid_lookup()) ASSERTION(\ fid_is_sane(fid) || fid_is_idif(fid) ) failed: [0x280000401:0x1de:0x580000] Message from syslogd@u at Jul 18 11:10:45 ... kernel:[ 235.765902] LustreError: 14553:0:(osd_handler.c:561:osd_fid_lookup()) LBUG [ 235.762603] LustreError: 14553:0:(osd_handler.c:561:osd_fid_lookup()) ASSERTION( fid_is_\ sane(fid) || fid_is_idif(fid) ) failed: [0x280000401:0x1de:0x580000] [ 235.765902] LustreError: 14553:0:(osd_handler.c:561:osd_fid_lookup()) LBUG [ 235.767672] Pid: 14553, comm: mdt00_009 [ 235.768310] [ 235.768311] Call Trace: [ 235.768986] [<ffffffffa02be8c5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [ 235.770371] [<ffffffffa02beec7>] lbug_with_loc+0x47/0xb0 [libcfs] [ 235.771549] [<ffffffffa0c0cd2e>] osd_object_init+0x21e/0x1aa0 [osd_ldiskfs] [ 235.772829] [<ffffffff812b3838>] ? __spin_lock_init+0x38/0x70 [ 235.774044] [<ffffffffa045320c>] ? lu_object_add+0x2c/0x30 [obdclass] [ 235.775237] [<ffffffffa0d50e57>] ? lod_object_init+0x227/0x3c0 [lod] [ 235.776557] [<ffffffffa04556d8>] lu_object_alloc+0xd8/0x320 [obdclass] [ 235.777885] [<ffffffffa0456ad1>] lu_object_find_at+0x131/0x360 [obdclass] [ 235.779649] [<ffffffffa0d50255>] ? lod_index_lookup+0x25/0x30 [lod] [ 235.781140] [<ffffffffa0c088cd>] ? osd_attr_get+0x13d/0x180 [osd_ldiskfs] [ 235.782940] [<ffffffffa0456d16>] lu_object_find+0x16/0x20 [obdclass] [ 235.784626] [<ffffffffa0c9116f>] mdt_object_new+0x5f/0x180 [mdt] [ 235.786214] [<ffffffffa0cb16f2>] mdt_reint_create+0x972/0xd40 [mdt] [ 235.787718] [<ffffffffa0c8fe45>] ? mdt_ucred+0x15/0x20 [mdt] [ 235.788965] [<ffffffffa0ca886c>] ? mdt_root_squash+0x2c/0x3f0 [mdt] [ 235.790264] [<ffffffffa06b1db6>] ? __req_capsule_get+0x166/0x6e0 [ptlrpc] [ 235.791995] [<ffffffffa068bb4e>] ? lustre_pack_reply_flags+0xae/0x1f0 [ptlrpc] [ 235.793897] [<ffffffffa0cac701>] mdt_reint_rec+0x41/0xe0 [mdt] [ 235.795452] [<ffffffffa0c97a63>] mdt_reint_internal+0x4c3/0x7c0 [mdt] [ 235.797163] [<ffffffffa0c982eb>] mdt_reint+0x6b/0x120 [mdt] [ 235.798777] [<ffffffffa06e9675>] tgt_request_handle+0x245/0xad0 [ptlrpc] [ 235.800512] [<ffffffffa069c921>] ptlrpc_main+0xcf1/0x1870 [ptlrpc] [ 235.802163] [<ffffffffa069bc30>] ? ptlrpc_main+0x0/0x1870 [ptlrpc] [ 235.803703] [<ffffffff8109eab6>] kthread+0x96/0xa0 [ 235.804913] [<ffffffff8100c30a>] child_rip+0xa/0x20 [ 235.805766] [<ffffffff81554710>] ? _spin_unlock_irq+0x30/0x40 [ 235.807213] [<ffffffff8100bb10>] ? restore_args+0x0/0x30 [ 235.808481] [<ffffffff8109ea20>] ? kthread+0x0/0xa0 [ 235.809813] [<ffffffff8100c300>] ? child_rip+0x0/0x20
[ 539.741719] LustreError: 9818:0:(dt_object.h:954:dt_object_lock()) ASSERTION( o->do_ops-\ >do_object_lock != ((void *)0) ) failed: [ 539.745329] LustreError: 9818:0:(dt_object.h:954:dt_object_lock()) LBUG [ 539.747352] Pid: 9818, comm: mdt00_006 [ 539.748537] [ 539.748539] Call Trace: [ 539.749810] [<ffffffffa02be8c5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [ 539.751974] [<ffffffffa02beec7>] lbug_with_loc+0x47/0xb0 [libcfs] [ 539.753931] [<ffffffffa0d5620a>] lod_object_lock+0x5da/0x700 [lod] [ 539.755785] [<ffffffffa0813c9b>] mdd_object_lock+0x3b/0xd0 [mdd] [ 539.757599] [<ffffffffa0c99c6c>] mdt_remote_object_lock+0x14c/0x320 [mdt] [ 539.759622] [<ffffffffa0c9a9be>] mdt_object_lock_internal+0x11e/0x360 [mdt] [ 539.761730] [<ffffffffa0c9acc4>] mdt_object_lock+0x14/0x20 [mdt] [ 539.763528] [<ffffffffa0cb503a>] mdt_reint_unlink+0x24a/0x10b0 [mdt] [ 539.765448] [<ffffffffa0c8fe45>] ? mdt_ucred+0x15/0x20 [mdt] [ 539.767177] [<ffffffffa0ca886c>] ? mdt_root_squash+0x2c/0x3f0 [mdt] [ 539.769244] [<ffffffffa06b1db6>] ? __req_capsule_get+0x166/0x6e0 [ptlrpc] [ 539.771340] [<ffffffffa068bb4e>] ? lustre_pack_reply_flags+0xae/0x1f0 [ptlrpc] [ 539.773517] [<ffffffffa0cac701>] mdt_reint_rec+0x41/0xe0 [mdt] [ 539.775252] [<ffffffffa0c97a63>] mdt_reint_internal+0x4c3/0x7c0 [mdt] [ 539.777184] [<ffffffffa0c982eb>] mdt_reint+0x6b/0x120 [mdt] [ 539.779012] [<ffffffffa06e9675>] tgt_request_handle+0x245/0xad0 [ptlrpc] [ 539.781060] [<ffffffffa069c921>] ptlrpc_main+0xcf1/0x1870 [ptlrpc] [ 539.782974] [<ffffffffa069bc30>] ? ptlrpc_main+0x0/0x1870 [ptlrpc] [ 539.784830] [<ffffffff8109eab6>] kthread+0x96/0xa0 [ 539.786290] [<ffffffff8100c30a>] child_rip+0xa/0x20 [ 539.787836] [<ffffffff81554710>] ? _spin_unlock_irq+0x30/0x40 [ 539.789589] [<ffffffff8100bb10>] ? restore_args+0x0/0x30 [ 539.791170] [<ffffffff8109ea20>] ? kthread+0x0/0xa0 [ 539.792615] [<ffffffff8100c300>] ? child_rip+0x0/0x20 [ 539.794152]
[ 1143.336957] LustreError: 3934:0:(dt_object.c:194:dt_mode_to_dft()) LBUG [ 1143.338199] Pid: 3934, comm: mdt00_001 [ 1143.338840] [ 1143.338841] Call Trace: [ 1143.339673] [<ffffffffa02be8c5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [ 1143.340934] [<ffffffffa02beec7>] lbug_with_loc+0x47/0xb0 [libcfs] [ 1143.342103] [<ffffffffa0457909>] dt_mode_to_dft+0x49/0xa0 [obdclass] [ 1143.343370] [<ffffffffa0814314>] mdd_declare_object_create_internal+0x174/0x1e0 [mdd] [ 1143.344728] [<ffffffffa0807a49>] mdd_create+0x769/0x1870 [mdd] [ 1143.345748] [<ffffffffa0c088cd>] ? osd_attr_get+0x13d/0x180 [osd_ldiskfs] [ 1143.346953] [<ffffffffa068ab15>] ? lustre_msg_buf+0x55/0x60 [ptlrpc] [ 1143.348078] [<ffffffffa0cb1977>] mdt_reint_create+0xbf7/0xd40 [mdt] [ 1143.349177] [<ffffffffa0c8fe45>] ? mdt_ucred+0x15/0x20 [mdt] [ 1143.350151] [<ffffffffa0ca886c>] ? mdt_root_squash+0x2c/0x3f0 [mdt] [ 1143.351290] [<ffffffffa06b1db6>] ? __req_capsule_get+0x166/0x6e0 [ptlrpc] [ 1143.352489] [<ffffffffa068bb4e>] ? lustre_pack_reply_flags+0xae/0x1f0 [ptlrpc] [ 1143.353727] [<ffffffffa0cac701>] mdt_reint_rec+0x41/0xe0 [mdt] [ 1143.354762] [<ffffffffa0c97a63>] mdt_reint_internal+0x4c3/0x7c0 [mdt] [ 1143.355866] [<ffffffffa0c982eb>] mdt_reint+0x6b/0x120 [mdt] [ 1143.357082] [<ffffffffa06e9675>] tgt_request_handle+0x245/0xad0 [ptlrpc] [ 1143.358505] [<ffffffffa069c921>] ptlrpc_main+0xcf1/0x1870 [ptlrpc] [ 1143.359650] [<ffffffffa069bc30>] ? ptlrpc_main+0x0/0x1870 [ptlrpc] [ 1143.360709] [<ffffffff8109eab6>] kthread+0x96/0xa0 [ 1143.361527] [<ffffffff8100c30a>] child_rip+0xa/0x20 [ 1143.362374] [<ffffffff81554710>] ? _spin_unlock_irq+0x30/0x40 [ 1143.363336] [<ffffffff8100bb10>] ? restore_args+0x0/0x30 [ 1143.364230] [<ffffffff8109ea20>] ? kthread+0x0/0xa0 [ 1143.365051] [<ffffffff8100c300>] ? child_rip+0x0/0x20 [ 1143.365874]
Message from syslogd@u at Jul 18 11:58:54 ... kernel:[ 675.213647] LustreError: 7203:0:(lmv_fld.c:72:lmv_fld_lookup()) ASSERTION( (fid_\ seq_in_fldb(fid_seq(fid)) || fid_seq_is_local_file(fid_seq(fid))) && fid_is_sane(fid) ) fai\ led: [0x0:0x0:0x0] is insane! Message from syslogd@u at Jul 18 11:58:54 ... kernel:[ 675.218922] LustreError: 7203:0:(lmv_fld.c:72:lmv_fld_lookup()) LBUG Message from syslogd@u at Jul 18 11:58:54 ... kernel:[ 675.254489] Kernel panic - not syncing: LBUG [ 675.218922] LustreError: 7203:0:(lmv_fld.c:72:lmv_fld_lookup()) LBUG [ 675.220614] Pid: 7203, comm: rmdir [ 675.221247] [ 675.221248] Call Trace: [ 675.222020] [<ffffffffa02be8c5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [ 675.223322] [<ffffffffa02beec7>] lbug_with_loc+0x47/0xb0 [libcfs] [ 675.224502] [<ffffffffa08ca7ad>] lmv_fld_lookup+0x18d/0x3c0 [lmv] [ 675.225651] [<ffffffff812a941a>] ? strlcpy+0x4a/0x60 [ 675.226618] [<ffffffffa08b273a>] lmv_unpack_md+0x55a/0xaf0 [lmv] [ 675.227744] [<ffffffffa08b2cde>] lmv_unpackmd+0xe/0x10 [lmv] [ 675.228826] [<ffffffffa08f8896>] obd_unpackmd+0xe6/0x360 [mdc] [ 675.229931] [<ffffffffa0905148>] mdc_get_lustre_md+0x3c8/0x13f0 [mdc] [ 675.231133] [<ffffffffa08ad4b8>] lmv_get_lustre_md+0x88/0x300 [lmv] [ 675.232339] [<ffffffffa0e6b02e>] ll_prep_inode+0x19e/0xe80 [lustre] [ 675.233523] [<ffffffffa08c74f7>] ? lmv_intent_remote+0x457/0x9e0 [lmv] [ 675.234788] [<ffffffffa068f090>] ? lustre_swab_mdt_body+0x0/0x140 [ptlrpc] [ 675.236091] [<ffffffffa0e7ac01>] ll_lookup_it_finish+0x2f1/0x11b0 [lustre] [ 675.237381] [<ffffffff811846d8>] ? cache_free_debugcheck+0x198/0x260 [ 675.238571] [<ffffffff81186c34>] ? kmem_cache_alloc_trace+0x254/0x2b0 [ 675.239769] [<ffffffff810b777d>] ? trace_hardirqs_on+0xd/0x10 [ 675.240863] [<ffffffffa0e7a110>] ? ll_md_blocking_ast+0x0/0x800 [lustre] [ 675.242124] [<ffffffffa0e7bd77>] ll_lookup_it+0x2b7/0xad0 [lustre] [ 675.243291] [<ffffffffa0e7c61c>] ll_lookup_nd+0x8c/0x4a0 [lustre] [ 675.244463] [<ffffffff811b0442>] __lookup_hash+0x102/0x160 [ 675.245489] [<ffffffff811b0b7a>] lookup_hash+0x3a/0x50 [ 675.246429] [<ffffffff811b44c4>] do_rmdir+0x164/0x1f0 [ 675.247380] [<ffffffff8119f6c3>] ? sys_close+0x43/0x120 [ 675.248379] [<ffffffff81554298>] ? lockdep_sys_exit_thunk+0x35/0x67 [ 675.249548] [<ffffffff810f08f7>] ? audit_syscall_entry+0x1d7/0x200 [ 675.250697] [<ffffffff81554222>] ? trace_hardirqs_on_thunk+0x3a/0x3f [ 675.251870] [<ffffffff811b45a6>] sys_rmdir+0x16/0x20 [ 675.252822] [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b [ 675.253925]
[ 648.662173] BUG: unable to handle kernel NULL pointer dereference at (null) [ 648.662851] IP: [<(null)>] (null) [ 648.662851] PGD 21a416067 PUD 21a415067 PMD 0 [ 648.662851] Oops: 0010 [#1] SMP [ 648.662851] last sysfs file: /sys/devices/system/cpu/possible [ 648.662851] CPU 5 [ 648.662851] Modules linked in: lustre(U) ofd(U) osp(U) lod(U) ost(U) mdt(U) mdd(U) mgs(U\ ) nodemap(U) osd_ldiskfs(U) ldiskfs(U) exportfs lquota(U) lfsck(U) jbd obdecho(U) mgc(U) lo\ v(U) osc(U) mdc(U) lmv(U) fid(U) fld(U) ptlrpc(U) obdclass(U) ksocklnd(U) lnet(U) sha512_ge\ neric sha256_generic libcfs(U) autofs4 nfs lockd fscache auth_rpcgss nfs_acl sunrpc ipv6 mi\ crocode virtio_balloon virtio_net i2c_piix4 i2c_core ext4 jbd2 mbcache virtio_blk virtio_pc\ i virtio_ring virtio pata_acpi ata_generic ata_piix dm_mirror dm_region_hash dm_log dm_mod \ [last unloaded: speedstep_lib] [ 648.662851] [ 648.662851] Pid: 6194, comm: mdt01_002 Not tainted 2.6.32-431.5.1.el6.lustre.x86_64 #1 B\ ochs Bochs [ 648.662851] RIP: 0010:[<0000000000000000>] [<(null)>] (null) [ 648.662851] RSP: 0018:ffff8801f60ffa18 EFLAGS: 00010246 [ 648.662851] RAX: ffffffffa0dbab40 RBX: ffff8801e11ba408 RCX: ffff8801d76ef0b0 [ 648.662851] RDX: ffff8801f349bb10 RSI: ffff8801f61011c8 RDI: ffff880216b142a0 [ 648.662851] RBP: ffff8801f60ffa70 R08: 0000000000004000 R09: 0000000000000000 [ 648.662851] R10: 0000000000004000 R11: 0000000000000000 R12: ffff8801f5a99b58 [ 648.662851] R13: ffff8801f5a99b58 R14: ffff8801f5a6c000 R15: ffff880216b142a0 [ 648.662851] FS: 0000000000000000(0000) GS:ffff880030200000(0000) knlGS:0000000000000000 [ 648.662851] CS: 0010 DS: 0018 ES: 0018 CR0: 000000008005003b [ 648.662851] CR2: 0000000000000000 CR3: 000000021abdf000 CR4: 00000000000006e0 [ 648.662851] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000 [ 648.662851] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400 [ 648.662851] Process mdt01_002 (pid: 6194, threadinfo ffff8801f60fe000, task ffff8801f60f\ c540) [ 648.662851] Stack: [ 648.662851] ffffffffa0d57a9c fffffffffffffffe ffff8801f349bb10 ffffffff00004000 [ 648.662851] <d> ffff8801f61011c8 0000000000000000 ffff8801f61011c8 ffff8801f61005d8 [ 648.662851] <d> ffff8801e11ba408 ffff880216b142a0 ffff8801f5a99b58 ffff8801f60ffac0 [ 648.662851] Call Trace: [ 648.662851] [<ffffffffa0d57a9c>] ? lod_ah_init+0x2bc/0xb40 [lod] [ 648.662851] [<ffffffffa08144b9>] mdd_object_make_hint+0x139/0x180 [mdd] [ 648.662851] [<ffffffffa0c0252b>] ? osd_object_read_unlock+0x8b/0xd0 [osd_ldiskfs] [ 648.662851] [<ffffffffa08079cb>] mdd_create+0x6eb/0x1870 [mdd] [ 648.662851] [<ffffffffa0c078cd>] ? osd_attr_get+0x13d/0x180 [osd_ldiskfs] [ 648.662851] [<ffffffffa068ab15>] ? lustre_msg_buf+0x55/0x60 [ptlrpc] [ 648.662851] [<ffffffffa0cb0977>] mdt_reint_create+0xbf7/0xd40 [mdt] [ 648.662851] [<ffffffffa0c8ee45>] ? mdt_ucred+0x15/0x20 [mdt] [ 648.662851] [<ffffffffa0ca786c>] ? mdt_root_squash+0x2c/0x3f0 [mdt] [ 648.662851] [<ffffffffa06b1db6>] ? __req_capsule_get+0x166/0x6e0 [ptlrpc] [ 648.662851] [<ffffffffa068bb4e>] ? lustre_pack_reply_flags+0xae/0x1f0 [ptlrpc] [ 648.662851] [<ffffffffa0cab701>] mdt_reint_rec+0x41/0xe0 [mdt] [ 648.662851] [<ffffffffa0c96a63>] mdt_reint_internal+0x4c3/0x7c0 [mdt] [ 648.662851] [<ffffffffa0c972eb>] mdt_reint+0x6b/0x120 [mdt] [ 648.662851] [<ffffffffa06e9675>] tgt_request_handle+0x245/0xad0 [ptlrpc] [ 648.662851] [<ffffffffa069c921>] ptlrpc_main+0xcf1/0x1870 [ptlrpc] [ 648.662851] [<ffffffffa069bc30>] ? ptlrpc_main+0x0/0x1870 [ptlrpc] [ 648.662851] [<ffffffff8109eab6>] kthread+0x96/0xa0 [ 648.728352] [<ffffffff8100c30a>] child_rip+0xa/0x20 [ 648.728352] [<ffffffff81554710>] ? _spin_unlock_irq+0x30/0x40 [ 648.728352] [<ffffffff8100bb10>] ? restore_args+0x0/0x30 [ 648.728352] [<ffffffff8109ea20>] ? kthread+0x0/0xa0 [ 648.728352] [<ffffffff8100c300>] ? child_rip+0x0/0x20 [ 648.728352] Code: Bad RIP value. [ 648.728352] RIP [<(null)>] (null) [ 648.728352] RSP <ffff8801f60ffa18> [ 648.728352] CR2: 0000000000000000
[ 747.919670] LustreError: 6259:0:(mdt_handler.c:3352:mdt_intent_reint()) ASSERTION( lustr\ e_handle_is_used(&lhc->mlh_reg_lh) ) failed: [ 747.923098] LustreError: 6259:0:(mdt_handler.c:3352:mdt_intent_reint()) LBUG [ 747.924948] Pid: 6259, comm: mdt00_000 [ 747.925964] [ 747.925966] Call Trace: [ 747.927075] [<ffffffffa02be8c5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [ 747.929057] [<ffffffffa02beec7>] lbug_with_loc+0x47/0xb0 [libcfs] [ 747.930742] [<ffffffffa0c97245>] mdt_intent_reint+0x4e5/0x520 [mdt] [ 747.932361] [<ffffffffa0c95639>] mdt_intent_policy+0x499/0xca0 [mdt] [ 747.934062] [<ffffffffa0643332>] ldlm_lock_enqueue+0x302/0x880 [ptlrpc] [ 747.935772] [<ffffffffa066b2b1>] ldlm_handle_enqueue0+0x341/0x11e0 [ptlrpc] [ 747.937580] [<ffffffffa06ea3e2>] tgt_enqueue+0x62/0x1d0 [ptlrpc] [ 747.939159] [<ffffffffa06e9675>] tgt_request_handle+0x245/0xad0 [ptlrpc] [ 747.940889] [<ffffffffa069c921>] ptlrpc_main+0xcf1/0x1870 [ptlrpc] [ 747.942666] [<ffffffffa069bc30>] ? ptlrpc_main+0x0/0x1870 [ptlrpc] [ 747.944537] [<ffffffff8109eab6>] kthread+0x96/0xa0 [ 747.946030] [<ffffffff8100c30a>] child_rip+0xa/0x20 [ 747.947502] [<ffffffff81554710>] ? _spin_unlock_irq+0x30/0x40 [ 747.949204] [<ffffffff8100bb10>] ? restore_args+0x0/0x30 [ 747.950788] [<ffffffff8109ea20>] ? kthread+0x0/0xa0 [ 747.952266] [<ffffffff8100c300>] ? child_rip+0x0/0x20
Attachments
Issue Links
- is related to
-
LU-5370 mdt_open_by_fid_lock() may return -EREMOTE without setting lock handle
-
- Resolved
-
-
LU-13061 osd_fid_lookup()) ASSERTION( fid_is_sane(fid) || fid_is_idif(fid) ) failed: [0x0:0x68:0x0]
-
- Resolved
-
-
LU-4232 MDT and OST should validate incoming FIDs belong to local target
-
- Open
-
- is related to
-
LU-4226 MDS unable to locate swabbed FID SEQ in FLDB
-
- Resolved
-
- mentioned in
-
Page Loading...